syntax = "proto3";

package datifyy.v1;

option go_package = "github.com/datifyy/backend/gen/datifyy/v1";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message GetUserRequest {
  string id = 1;
}

message GetUserResponse {
  User user = 1;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (GetUserResponse);
}